1997-07-06  enami tsugutomo  <enami@but-b.or.jp>

	* logmsg.c (do_verify): Unlink temporary file before call error().
	Remove unneeded `return' statement.  Fix comment.

Sun Jul  6 13:36:32 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* diff.c (diff_fileproc): Change message from "during rcsdiff of"
	to "while diffing".  For a while now, that message might be
	printed after a call to DIFF instead of rcsdiff.

	* diff.c (diff_fileproc): Call cvs_output not printf.  Remove
	calls to fflush (should be handled now by call to cvs_outflush in
	recurse.c).
	* patch.c (patch_fileproc): Likewise.

	* rcscmds.c, cvs.h (diff_exec): New function.
	* diff.c (diff_fileproc), patch.c (patch_fileproc),
	update.c (patch_file): Call it.

	* rcscmds.c: Adjust comments concerning diff library to point to
	new, expanded comments at diff_exec.  Remove comments concerning
	patch library; Rcs-diff should be adequate.

	* client.c (update_entries): Add comment about GNU patch usage (-b
	option and so on).

Sat Jul  5 04:13:28 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* rcscmds.c, cvs.h (RCS_exec_rcsdiff): New function.
	* diff.c (diff_fileproc): Call it.

Thu Jul  3 09:50:07 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* main.c (main): Add comment about how long we should keep the
	deprecated "cvs rlog" alias.

	* server.c (cvs_output): Add comment about whether to fflush.

Wed Jul  2 18:57:29 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (join2): New tests join2-19 and friends test for a
	case that we can't readily get right (see comments).

Tue Jul  1 09:52:09 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* main.c (cmd_usage): Say "specify" --help rather than the vague
	"use".
	(opt_usage, cmd_synonyms): Mention --help here too.
	* add.c, admin.c, checkout.c, commit.c, diff.c, edit.c, import.c,
	log.c, login.c, mkmodules.c, patch.c, rcs.c, release.c, remove.c,
	rtag.c, status.c, tag.c, update.c, watch.c: Likewise, for all the
	other help messages.
